--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.5",
+        "maatwebsite/excel": "^3.1",
         "vinkla/hashids": "^11.0"
     },
     "require-dev": {
